--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="font-body">
-    <header class="flex px-32 py-10 justify-between items-center">
+    <header class="flex px-8 md:px-32 py-10 justify-between items-center">
       <div class="logo-container">
-        <img src="./images/Logo.png" alt="" />
+        <a href="http://" target="_blank"><img src="./images/Logo.png" alt="" /></a>
       </div>
       <nav class="navbar">
-        <ul class="flex gap-10 text-xl">
+        <ul class="hidden md:flex md:gap-10 md:text-xl">
           <li class="navbar-item "><a class="transition ease-in-out delay-300 hover:border-b-4 hover:border-indigo-950 duration-300" href="">Home</a></li>
           <li class="navbar-item "><a class="transition ease-in-out delay-300 hover:border-b-4 hover:border-indigo-950 duration-300" href="">Recents</a></li>
           <li class="navbar-item "><a class="transition ease-in-out delay-300 hover:border-b-4 hover:border-indigo-950 duration-300" href="">Saved Password</a></li>
@@ -36,32 +36,40 @@
         </ul>
       </nav>
     </header>
-    <div class="px-[118px] flex items-center">
-      <div class="flex w-[490px] flex-col gap-2 items-start">
-        <h1 class="text-[40px] leading-[56px] font-semibold">
-          Generate the hard-to-get and easy-to-remember password
-        </h1>
-        <p class="text-xl font-medium leading-5">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-          molestias cumque voluptatibus porro quod at dignissimos, temporibus,
-          iusto officia ullam nemo voluptates corrupti recusandae obcaecati ab
-          sequi et quia hic!
-        </p>
-        <button
-          class="font-medium text-sm px-8 py-2 bg-indigo-950 rounded-md text-white"
-        >
-          Generate
-        </button>
+    <div class="px-8 flex flex-col-reverse md:px-[118px] md:flex md:flex-row md:items-center">
+      <div class="flex flex-col items-center md:flex  md:w-[490px] md:flex-col md:gap-2 md:items-start">
+        <div class="flex gap-1 md:hidden">
+          <svg width="70" height="21" viewBox="0 0 70 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.525 20.3C9.14167 20.3 7.86667 20.0833 6.7 19.65C5.55 19.2 4.54167 18.5667 3.675 17.75C2.825 16.9333 2.15833 15.975 1.675 14.875C1.20833 13.775 0.975 12.5667 0.975 11.25C0.975 9.93333 1.20833 8.725 1.675 7.625C2.15833 6.525 2.83333 5.56667 3.7 4.75C4.56667 3.93333 5.58333 3.30833 6.75 2.875C7.91667 2.425 9.2 2.2 10.6 2.2C12.15 2.2 13.5417 2.45833 14.775 2.975C16.025 3.49167 17.075 4.24167 17.925 5.225L15.325 7.625C14.6917 6.95833 14 6.46667 13.25 6.15C12.5 5.81667 11.6833 5.65 10.8 5.65C9.95 5.65 9.175 5.78333 8.475 6.05C7.775 6.31667 7.16667 6.7 6.65 7.2C6.15 7.7 5.75833 8.29167 5.475 8.975C5.20833 9.65833 5.075 10.4167 5.075 11.25C5.075 12.0667 5.20833 12.8167 5.475 13.5C5.75833 14.1833 6.15 14.7833 6.65 15.3C7.16667 15.8 7.76667 16.1833 8.45 16.45C9.15 16.7167 9.91667 16.85 10.75 16.85C11.55 16.85 12.325 16.725 13.075 16.475C13.8417 16.2083 14.5833 15.7667 15.3 15.15L17.6 18.075C16.65 18.7917 15.5417 19.3417 14.275 19.725C13.025 20.1083 11.775 20.3 10.525 20.3ZM13.9 17.55V10.975H17.6V18.075L13.9 17.55ZM27.7621 20.2C26.2288 20.2 24.8788 19.9 23.7121 19.3C22.5621 18.7 21.6704 17.8833 21.0371 16.85C20.4038 15.8 20.0871 14.6083 20.0871 13.275C20.0871 11.925 20.3954 10.7333 21.0121 9.7C21.6454 8.65 22.5038 7.83333 23.5871 7.25C24.6704 6.65 25.8954 6.35 27.2621 6.35C28.5788 6.35 29.7621 6.63333 30.8121 7.2C31.8788 7.75 32.7204 8.55 33.3371 9.6C33.9538 10.6333 34.2621 11.875 34.2621 13.325C34.2621 13.475 34.2538 13.65 34.2371 13.85C34.2204 14.0333 34.2038 14.2083 34.1871 14.375H23.2621V12.1H32.1371L30.6371 12.775C30.6371 12.075 30.4954 11.4667 30.2121 10.95C29.9288 10.4333 29.5371 10.0333 29.0371 9.75C28.5371 9.45 27.9538 9.3 27.2871 9.3C26.6204 9.3 26.0288 9.45 25.5121 9.75C25.0121 10.0333 24.6204 10.4417 24.3371 10.975C24.0538 11.4917 23.9121 12.1083 23.9121 12.825V13.425C23.9121 14.1583 24.0704 14.8083 24.3871 15.375C24.7204 15.925 25.1788 16.35 25.7621 16.65C26.3621 16.9333 27.0621 17.075 27.8621 17.075C28.5788 17.075 29.2038 16.9667 29.7371 16.75C30.2871 16.5333 30.7871 16.2083 31.2371 15.775L33.3121 18.025C32.6954 18.725 31.9204 19.2667 30.9871 19.65C30.0538 20.0167 28.9788 20.2 27.7621 20.2ZM45.0336 6.35C46.1003 6.35 47.0503 6.56667 47.8836 7C48.7336 7.41667 49.4003 8.06667 49.8836 8.95C50.3669 9.81667 50.6086 10.9333 50.6086 12.3V20H46.7086V12.9C46.7086 11.8167 46.4669 11.0167 45.9836 10.5C45.5169 9.98333 44.8503 9.725 43.9836 9.725C43.3669 9.725 42.8086 9.85833 42.3086 10.125C41.8253 10.375 41.4419 10.7667 41.1586 11.3C40.8919 11.8333 40.7586 12.5167 40.7586 13.35V20H36.8586V6.55H40.5836V10.275L39.8836 9.15C40.3669 8.25 41.0586 7.55833 41.9586 7.075C42.8586 6.59167 43.8836 6.35 45.0336 6.35ZM54.1438 20V6.55H57.8688V10.35L57.3438 9.25C57.7438 8.3 58.3854 7.58333 59.2688 7.1C60.1521 6.6 61.2271 6.35 62.4938 6.35V9.95C62.3271 9.93333 62.1771 9.925 62.0438 9.925C61.9104 9.90833 61.7688 9.9 61.6188 9.9C60.5521 9.9 59.6854 10.2083 59.0188 10.825C58.3688 11.425 58.0438 12.3667 58.0438 13.65V20H54.1438ZM64.8371 20V6.55H68.7371V20H64.8371ZM66.7871 4.675C66.0704 4.675 65.4871 4.46667 65.0371 4.05C64.5871 3.63333 64.3621 3.11667 64.3621 2.5C64.3621 1.88333 64.5871 1.36667 65.0371 0.949999C65.4871 0.533332 66.0704 0.324998 66.7871 0.324998C67.5038 0.324998 68.0871 0.524999 68.5371 0.925C68.9871 1.30833 69.2121 1.80833 69.2121 2.425C69.2121 3.075 68.9871 3.61667 68.5371 4.05C68.1038 4.46667 67.5204 4.675 66.7871 4.675Z" fill="#4346E7"/>
+          </svg>
+          <p>generates the hard-to-get and easy-to-remember password for you</p>
+        </div>
+        <div class="flex flex-col gap-4 items-start">
+          <h1 class="hidden md:block md:text-[40px] md:leading-[56px] md:font-semibold">
+            Generate the hard-to-get and easy-to-remember password
+          </h1>
+          <p class="hidden md:block md:text-xl md:font-medium md:leading-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+            molestias cumque voluptatibus porro quod at dignissimos, temporibus,
+            iusto officia ullam nemo voluptates corrupti recusandae obcaecati ab
+            sequi et quia hic!
+          </p>
+          <button
+            class="hidden md:block md:font-medium md:text-sm md:px-8 md:py-2 bg-indigo-950 rounded-md text-white hover:bg-indigo-1000"
+          >
+            Generate
+          </button>
+        </div>
       </div>
-      <div class="w-1/2 mx-auto">
+      <div class="w-full md:w-1/2 md:mx-auto">
         <img class="w-full mx-auto" src="./images/Hero_Image.png" alt="" />
       </div>
     </div>
-    <div class="border-indigo-950 border-b-8 py-20">
+    <div class="px-8 border-indigo-950 border-b-8 py-20 md:px-0">
       <section
-        class="px-36 py-6 grid grid-cols-2 gap-5 bg-indigo-950 justify-between text-4xl mb-5"
+        class="rounded-xl p-5 flex flex-col gap-3 md:px-36 md:py-6 md:grid md:grid-cols-2 md:gap-5 md:rounded-none bg-indigo-950 justify-between md:text-4xl mb-5"
       >
-        <div class="uppercase-container pl-14 py-4 bg-indigo-1000 rounded-2xl">
+        <div class="uppercase-container pl-3 md:pl-14 py-4 bg-indigo-1000 rounded-2xl">
           <h4>Uppercase(A-Z)</h4>
           <div class="flex items-center gap-5">
             <input
@@ -75,7 +83,7 @@
             <p class="rounded-md w-[40px] h-[40px] border-4 border-indigo-950 bg-neutral-1000"><span id="uppercaseValue"></span></p>
           </div>
         </div>
-        <div class="lowercase-container pl-14 py-4 bg-indigo-1000 rounded-2xl">
+        <div class="lowercase-container pl-3 md:pl-14 py-4 bg-indigo-1000 rounded-2xl">
           <h4>Lowercase(a-z)</h4>
           <div class="flex items-center gap-5">
             <input
@@ -89,7 +97,7 @@
             <p class="rounded-md w-[40px] h-[40px] border-4 border-indigo-950 bg-neutral-1000"><span id="lowercaseValue"></span></p>
           </div>
         </div>
-        <div class="number-container pl-14 py-4 bg-indigo-1000 rounded-2xl">
+        <div class="number-container pl-3 md:pl-14 py-4 bg-indigo-1000 rounded-2xl">
           <h4>Number(0-9)</h4>
           <div class="flex items-center gap-5">
             <input
@@ -103,7 +111,7 @@
             <p class="rounded-md w-[40px] h-[40px] border-4 border-indigo-950 bg-neutral-1000"><span id="numberValue"></span></p>
           </div>
         </div>
-        <div class="symbols-container pl-14 py-4 bg-indigo-1000 rounded-2xl">
+        <div class="symbols-container pl-3 md:pl-14 py-4 bg-indigo-1000 rounded-2xl">
           <h4>Symbols(-@_)</h4>
           <div class="flex items-center gap-5">
             <input
@@ -121,12 +129,12 @@
       <section class="flex flex-col items-center justify-center gap-5">
         <div class="flex flex-col items-center">
           <p>Password Length: </p>
-          <p id="show-length" class="rounded-xl w-[150px] h-[60px] border-2 border-indigo-950"></p>
+          <p id="show-length" class="w-16 h-12 rounded-xl md:w-[150px] md:h-[60px] border-2 border-indigo-950"></p>
         </div>
-        <button id="generate-btn" class="font-medium text-4xl px-20 py-2 bg-indigo-950 rounded-md">Generate</button>
-        <div class="flex gap-6 items-center">
-          <p id="password" class="rounded-xl w-[400px] h-[80px] border-2 border-indigo-950"></p>
-          <button id="copy-button" class="flex gap-1 items-center rounded-md bg-indigo-950 px-4 py-2">
+        <button id="generate-btn" class="px-10 md:font-medium md:text-4xl md:px-20 py-2 bg-indigo-950 rounded-md hover:bg-indigo-1000">Generate</button>
+        <div class="flex gap-2 items-center">
+          <p id="password" class="w-[200px] h-[40px] rounded-xl md:w-[400px] md:h-[80px] border-2 border-indigo-950"></p>
+          <button id="copy-button" class="px-4 py-[6px] flex gap-1 items-center rounded-md bg-indigo-950 md:px-4 md:py-2 hover:bg-indigo-1000">
             <svg
               width="13"
               height="12"
@@ -144,12 +152,12 @@
         </div>
       </section>
     </div>
-    <div class="px-36 pt-7 grid grid-cols-2 gap-5">
-      <div class="pr-8 text-lg">
-        <div class="genri-logo">
+    <div class="px-8 md:px-36 pt-7 grid grid-cols-2">
+      <div class="pr-8">
+        <div class="genri-logo text-base">
           <img src="./images/Logo.png" alt="" />
         </div>
-        <p>
+        <p class="text-[5px] md:text-base">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           consequatur sequi aut minima accusantium, quos a nesciunt vel
           voluptatum velit dolorem quia delectus sint earum voluptates excepturi
@@ -159,23 +167,32 @@
       <div class="w-full">
         <p class="short-links mb-3">short links</p>
         <div>
-          <ul class="text-2xl">
+          <ul class="text-[8px] md:text-2xl">
             <li class="border-b-4 border-neutral-950">
-              <a class="text-indigo-950 pb-1" href="">Home</a>
+              <a class="text-indigo-950 pb-1 hover:text-neutral-600" href="">Home</a>
             </li>
             <li class="border-b-4 border-neutral-950">
-              <a class="text-indigo-950 pb-1" href="">About Us</a>
+              <a class="text-indigo-950 pb-1 hover:text-neutral-600" href="">About Us</a>
             </li>
             <li class="border-b-4 border-neutral-950">
-              <a class="text-indigo-950 pb-1" href="">Our Team</a>
+              <a class="text-indigo-950 pb-1 hover:text-neutral-600" href="">Our Team</a>
             </li>
             <li class="border-b-4 border-neutral-950">
-              <a class="text-indigo-950 pb-1" href="">Contact Us</a>
+              <a class="text-indigo-950 pb-1 hover:text-neutral-600" href="">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
+    <footer class="text-[9px] md:px-36 py-5 text-center md:text-base">
+      <p>
+        &copy; Copyright 2023 Genri. All rights reserved.
+      </p>
+      <p class="attribution">
+        Designed by <a class="text-indigo-950 hover:text-neutral-600" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Dokubo MacDaniel</a>. 
+        Coded by <a class="text-indigo-950 hover:text-neutral-600" href="https://github.com/IamHenryOkeke/Genri-Password-Generator" target="_blank">Okeke Nmesomachukwu Henry</a>.
+      </p>
+    </footer>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
