--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./public/output.css" />
   </head>
   <body class="font-body">
     <header class="flex px-8 md:px-32 py-10 justify-between items-center">
       <div class="logo-container">
-        <a href="http://" target="_blank"><img src="./images/Logo.png" alt="" /></a>
+        <a href="http://" target="_blank"><img src="./public/images/Logo.png" alt="" /></a>
       </div>
       <nav class="navbar">
         <ul class="hidden md:flex md:gap-10 md:text-xl">
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="w-full md:w-1/2 md:mx-auto">
-        <img class="w-full mx-auto" src="./images/Hero_Image.png" alt="" />
+        <img class="w-full mx-auto" src="./public/images/Hero_Image.png" alt="" />
       </div>
     </div>
     <div class="px-8 border-indigo-950 border-b-8 py-20 md:px-0">
@@ -155,9 +155,9 @@
     <div class="px-8 md:px-36 pt-7 grid grid-cols-2">
       <div class="pr-8">
         <div class="genri-logo text-base">
-          <img src="./images/Logo.png" alt="" />
+          <img src="./public/images/Logo.png" alt="" />
         </div>
-        <p class="text-[5px] md:text-base">
+        <p class="text-[6px] md:text-base">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           consequatur sequi aut minima accusantium, quos a nesciunt vel
           voluptatum velit dolorem quia delectus sint earum voluptates excepturi
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <footer class="text-[9px] md:px-36 py-5 text-center md:text-base">
+    <footer class="text-[8px] md:px-36 py-5 text-center md:text-base">
       <p>
         &copy; Copyright 2023 Genri. All rights reserved.
       </p>
