added link to designer account

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
           ><img src="./public/images/Logo.png" alt=""
         /></a>
         <span class="block text-3xl cursor-pointer md:hidden"
-          ><ion-icon
-            id="icon"
-            name="menu-outline"
-          ></ion-icon
+          ><ion-icon id="icon" name="menu-outline"></ion-icon
         ></span>
       </div>
 
@@ -298,7 +295,7 @@
         Designed by
         <a
           class="text-indigo-950 hover:text-neutral-600"
-          href="https://www.frontendmentor.io?ref=challenge"
+          href="https://twitter.com/HeyEmdeee"
           target="_blank"
           >Dokubo MacDanie Bitebo</a
         >. Coded by
