--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           class="text-indigo-950 hover:text-neutral-600"
           href="https://twitter.com/HeyEmdeee"
           target="_blank"
-          >Dokubo MacDanie Bitebo</a
+          >Dokubo Mac-Daniel Bitebo</a
         >. Coded by
         <a
           class="text-indigo-950 hover:text-neutral-600"
