--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
       </section>
     </div>
     <div class="px-8 md:px-36 pt-7 grid grid-cols-2">
-      <div class="pr-8">
+      <div class=" pr-4 md:pr-8">
         <div class="genri-logo text-base">
           <img src="./public/images/Logo.png" alt="" />
         </div>
-        <p class="text-[10px] md:text-base">
+        <p class="text-justify [10px] md:text-base">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           consequatur sequi aut minima accusantium, quos a nesciunt vel
           voluptatum velit dolorem quia delectus sint earum voluptates excepturi
